# cryptic

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml  lint.yml  publish_release.yml
script/: install_targets.sh
src/: config.rs  crypto.rs  fs_utils.rs  main.rs
tests/: crypto_tests.rs
tests/fixtures/: encrypted_small_text_file_pwd_1234  small_text_file.txt
